feat: index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <h2>project #1</h2>
         <ul>
-            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/sobre%20mim.html">sobre mim</a></h1></li>
+            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/sobre%20mim.html">sobre mim</a></h1></li>
             <div>
-            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/eu%20programador.html">eu programador</a></li></h1>
+            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/eu%20programador.html">eu programador</a></li></h1>
             </div>
         </ul>
     </nav>
