--- a/my projects.html
+++ b/my projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/mini_projeto.html">início</a></h1>
+        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/index.html">início</a></h1>
     </nav>
 </body>
 </html>
