--- a/sobre mim.html
+++ b/sobre mim.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/eu%20programador.html">eu programador</a></h1>
+        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/eu%20programador.html">eu programador</a></h1>
         <ul>
             <div>
-            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/mini_projeto.html">início</a></h1></li>
+            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/index.html">início</a></h1></li>
             </div>
         </ul>
     </nav>
@@ -30,7 +30,7 @@
             <a href="https://youtu.be/SV7TL0hxmIQ"target="_blanck">curso 1 hora HTML</a>
             <a href="https://youtu.be/vwbegraDXD8"target="_blanck">curso 1 hora e 50 minutos CSS</a>
         </ul>
-        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/my%20projects.html">ir para meus projetos</a></h1>
+        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/my%20projects.html">ir para meus projetos</a></h1>
         </footer>
     </div>
 </body>
