--- a/eu programador.html
+++ b/eu programador.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/sobre%20mim.html">sobre mim</a></h1>
+        <h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/sobre%20mim.html">sobre mim</a></h1>
         <ul>
             <div>
-            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/mini_projeto/mini_projeto.html">início</a></li></h1>
+            <li><h1><a href="file:///C:/Users/Miguel/Downloads/_Programa%C3%A7%C3%A3o/_project-Vs.Code/My_project/index.html">início</a></li></h1>
             </div>
         </ul>
     </nav>
